--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Новогодняя викторина — Зимние чудеса</title>
+<title>Новогодняя семейная викторина</title>
 
 <style>
 /* =========================
-   ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ
+   ЦВЕТОВАЯ ПАЛИТРА
 ========================= */
 :root {
   --bg-main: #0b1c2d;
-  --bg-card: rgba(255, 255, 255, 0.12);
+  --bg-card: rgba(255, 255, 255, 0.14);
   --text-main: #ffffff;
   --accent-red: #c62828;
   --accent-gold: #f5c76a;
@@ -20,7 +20,7 @@
 }
 
 /* =========================
-   СБРОС И БАЗА
+   БАЗОВЫЙ СБРОС
 ========================= */
 * {
   box-sizing: border-box;
@@ -30,7 +30,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background: radial-gradient(circle at top, #163a5f, var(--bg-main));
+  background: radial-gradient(circle at top, #173b5c, var(--bg-main));
   color: var(--text-main);
   display: flex;
   justify-content: center;
@@ -40,7 +40,7 @@ body {
 }
 
 /* =========================
-   СНЕГ (CSS + JS)
+   СНЕГ
 ========================= */
 .snow {
   position: fixed;
@@ -62,25 +62,21 @@ body {
 @keyframes snow-fall {
   0% { transform: translateY(0); opacity: 0; }
   10% { opacity: 1; }
-  100% { transform: translateY(110vh); opacity: 0.2; }
+  100% { transform: translateY(110vh); opacity: 0.25; }
 }
 
 /* =========================
-   ОСНОВНАЯ КАРТОЧКА
+   КАРТОЧКА
 ========================= */
 .quiz-container {
   position: relative;
   z-index: 2;
   width: 100%;
-  max-width: 720px;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.18),
-    var(--bg-card)
-  );
-  border-radius: 20px;
-  padding: 28px 26px 32px;
-  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.55);
+  max-width: 760px;
+  background: linear-gradient(180deg, rgba(255,255,255,0.18), var(--bg-card));
+  border-radius: 22px;
+  padding: 30px 28px 34px;
+  box-shadow: 0 25px 70px rgba(0, 0, 0, 0.55);
   backdrop-filter: blur(8px);
   animation: fadeUp 0.8s ease;
 }
@@ -92,7 +88,7 @@ body {
 
 h1 {
   text-align: center;
-  margin: 0 0 8px;
+  margin: 0 0 6px;
   font-weight: 600;
   letter-spacing: 0.4px;
 }
@@ -105,7 +101,18 @@ h1 {
 }
 
 /* =========================
-   ВОПРОСЫ И ОТВЕТЫ
+   СЕМЕЙНАЯ ВСТАВКА
+========================= */
+.family-note {
+  text-align: center;
+  font-size: 14px;
+  color: rgba(255,255,255,0.8);
+  margin-bottom: 20px;
+  font-style: italic;
+}
+
+/* =========================
+   ВОПРОСЫ
 ========================= */
 .question {
   font-size: 20px;
@@ -130,8 +137,7 @@ h1 {
 }
 
 .answer-btn:hover {
-  background: rgba(255,255,255,0.28);
-  box-shadow: 0 0 0 1px rgba(255,255,255,0.35);
+  background: rgba(255,255,255,0.3);
 }
 
 .answer-btn:active {
@@ -139,13 +145,11 @@ h1 {
 }
 
 .answer-btn.correct {
-  background: rgba(46, 125, 50, 0.6);
-  border-color: rgba(46, 125, 50, 0.9);
+  background: rgba(46, 125, 50, 0.65);
 }
 
 .answer-btn.wrong {
-  background: rgba(198, 40, 40, 0.55);
-  border-color: rgba(198, 40, 40, 0.85);
+  background: rgba(198, 40, 40, 0.6);
 }
 
 /* =========================
@@ -154,7 +158,6 @@ h1 {
 .feedback {
   margin-top: 14px;
   font-size: 14px;
-  opacity: 0;
   animation: fadeIn 0.4s forwards;
 }
 
@@ -163,7 +166,7 @@ h1 {
 }
 
 .feedback.wrong {
-  color: #ff8a80;
+  color: #ff9e9e;
 }
 
 @keyframes fadeIn {
@@ -208,7 +211,6 @@ h1 {
   font-size: 15px;
   font-weight: 600;
   cursor: pointer;
-  transition: transform 0.15s ease, box-shadow 0.25s ease;
 }
 
 .restart-btn:hover {
@@ -223,9 +225,7 @@ h1 {
    АДАПТИВНОСТЬ
 ========================= */
 @media (max-width: 480px) {
-  .question {
-    font-size: 18px;
-  }
+  .question { font-size: 18px; }
 }
 </style>
 </head>
@@ -235,8 +235,12 @@ h1 {
 <div class="snow" id="snow"></div>
 
 <div class="quiz-container">
-  <h1>Новогодняя викторина</h1>
-  <div class="subtitle">Зимние чудеса, традиции и атмосфера праздника</div>
+  <h1>Новогодняя семейная викторина</h1>
+  <div class="subtitle">Про зиму, традиции и тёплые вечера дома</div>
+  <div class="family-note">
+    Этот небольшой тест — как разговор за праздничным столом.<br>
+    Спокойно, с улыбкой и ощущением, что все свои.
+  </div>
   <div id="quiz"></div>
 </div>
 
@@ -245,66 +249,66 @@ h1 {
    СНЕГ
 ========================= */
 const snowContainer = document.getElementById("snow");
-for (let i = 0; i < 50; i++) {
+for (let i = 0; i < 55; i++) {
   const flake = document.createElement("span");
   flake.style.left = Math.random() * 100 + "vw";
-  flake.style.animationDuration = 5 + Math.random() * 8 + "s";
+  flake.style.animationDuration = 6 + Math.random() * 8 + "s";
   flake.style.transform = `scale(${0.5 + Math.random()})`;
   snowContainer.appendChild(flake);
 }
 
 /* =========================
-   ДАННЫЕ ВИКТОРИНЫ
+   ВОПРОСЫ (СЕМЕЙНАЯ АТМОСФЕРА)
 ========================= */
 const questions = [
   {
-    q: "В какой стране Новый год традиционно встречают в середине лета?",
-    a: ["Австралия", "Аргентина", "ЮАР", "Бразилия"],
-    correct: 0
-  },
-  {
-    q: "Какой предмет чаще всего ассоциируется с новогодним отсчётом времени?",
-    a: ["Свеча", "Колокол", "Часы", "Фейерверк"],
-    correct: 2
-  },
-  {
-    q: "Какой фильм стал неотъемлемой частью новогоднего вечера в странах СНГ?",
-    a: ["Карнавальная ночь", "Ирония судьбы", "Чародеи", "Один дома"],
-    correct: 1
-  },
-  {
-    q: "Какое дерево чаще всего украшают на Новый год?",
-    a: ["Сосна", "Пихта", "Ель", "Кедр"],
-    correct: 2
-  },
-  {
-    q: "В какой стране принято есть 12 виноградин в полночь?",
-    a: ["Италия", "Испания", "Франция", "Португалия"],
-    correct: 1
-  },
-  {
-    q: "Какой цвет символизирует удачу и богатство в новогодних традициях?",
-    a: ["Синий", "Красный", "Золотой", "Белый"],
-    correct: 2
-  },
-  {
-    q: "Что традиционно прячут в праздничный торт в некоторых странах?",
-    a: ["Монету", "Орех", "Фигурку", "Записку"],
-    correct: 0
-  },
-  {
-    q: "Какой праздник исторически предшествовал современному Новому году?",
-    a: ["Сатурналии", "Йоль", "Солнцестояние", "Все перечисленные"],
+    q: "Что в новогоднем вечере создаёт настоящее ощущение дома?",
+    a: ["Украшенная ёлка", "Запах еды из кухни", "Общие разговоры", "Все вместе"],
     correct: 3
   },
   {
-    q: "Какой напиток чаще всего ассоциируется с новогодним тостом?",
-    a: ["Вино", "Шампанское", "Пунш", "Сидр"],
-    correct: 1
+    q: "Какой момент чаще всего запоминается на годы?",
+    a: ["Тосты", "Шутки за столом", "Тихие разговоры", "Смех без причины"],
+    correct: 3
   },
   {
-    q: "Что символизирует снег в новогодней культуре?",
-    a: ["Обновление", "Тишину", "Чистоту", "Всё перечисленное"],
+    q: "Что важнее подарков в Новый год?",
+    a: ["Внимание", "Традиции", "Настроение", "Присутствие близких"],
+    correct: 3
+  },
+  {
+    q: "Как лучше всего почувствовать праздник?",
+    a: ["Замедлиться", "Быть рядом", "Убрать телефон", "Всё сразу"],
+    correct: 3
+  },
+  {
+    q: "Что объединяет семью в праздники?",
+    a: ["Привычки", "Истории", "Общие воспоминания", "Все варианты"],
+    correct: 3
+  },
+  {
+    q: "Что чаще всего звучит в тёплый семейный вечер?",
+    a: ["Музыка", "Смех", "Разговоры", "Всё понемногу"],
+    correct: 3
+  },
+  {
+    q: "Почему Новый год ощущается особенно?",
+    a: ["Из-за традиций", "Из-за атмосферы", "Из-за людей рядом", "Из-за всего вместе"],
+    correct: 3
+  },
+  {
+    q: "Какой жест лучше всего передаёт заботу?",
+    a: ["Слова", "Подарок", "Присутствие", "Внимание"],
+    correct: 2
+  },
+  {
+    q: "Что хочется сохранить из этого вечера?",
+    a: ["Фотографии", "Моменты", "Разговоры", "Ощущение тепла"],
+    correct: 3
+  },
+  {
+    q: "Что делает праздник по-настоящему семейным?",
+    a: ["Традиции", "Совместное время", "Искренность", "Всё вместе"],
     correct: 3
   }
 ];
@@ -314,7 +318,7 @@ let score = 0;
 const quiz = document.getElementById("quiz");
 
 /* =========================
-   ОТРИСОВКА ВОПРОСА
+   ОТРИСОВКА
 ========================= */
 function renderQuestion() {
   const q = questions[current];
@@ -334,18 +338,18 @@ function selectAnswer(index) {
   const buttons = document.querySelectorAll(".answer-btn");
   buttons.forEach(btn => btn.disabled = true);
 
-  let feedback = document.createElement("div");
+  const feedback = document.createElement("div");
   feedback.className = "feedback";
 
   if (index === q.correct) {
     buttons[index].classList.add("correct");
-    feedback.textContent = "Верно! Отличное чувство праздника 🎄";
+    feedback.textContent = "Верно. Это про тепло и близость ✨";
     feedback.classList.add("correct");
     score++;
   } else {
     buttons[index].classList.add("wrong");
     buttons[q.correct].classList.add("correct");
-    feedback.textContent = "Неверно, но праздник продолжается ✨";
+    feedback.textContent = "Не совсем, но атмосфера всё равно тёплая 🎄";
     feedback.classList.add("wrong");
   }
 
@@ -353,11 +357,7 @@ function selectAnswer(index) {
 
   setTimeout(() => {
     current++;
-    if (current < questions.length) {
-      renderQuestion();
-    } else {
-      showResult();
-    }
+    current < questions.length ? renderQuestion() : showResult();
   }, 1400);
 }
 
@@ -366,15 +366,15 @@ function selectAnswer(index) {
 ========================= */
 function showResult() {
   const percent = Math.round((score / questions.length) * 100);
-  let message = "Новый год принесёт тебе счастье!";
+  let message = "Пусть в новом году будет больше таких вечеров.";
 
-  if (percent >= 90) message = "Ты настоящий волшебник зимы!";
-  else if (percent >= 70) message = "Отлично! Год будет удачным!";
-  else if (percent >= 50) message = "Хороший результат — впереди чудеса!";
+  if (percent >= 90) message = "Ты создаёшь настоящее ощущение дома.";
+  else if (percent >= 70) message = "Отлично! У тебя тёплое праздничное чувство.";
+  else if (percent >= 50) message = "Праздник — это люди рядом, и ты это знаешь.";
 
   quiz.innerHTML = `
     <div class="result">
-      <h2>Результат</h2>
+      <h2>Итог</h2>
       <p>Правильных ответов: <strong>${score}</strong> из ${questions.length}</p>
       <p>Процент успеха: <strong>${percent}%</strong></p>
       <p>${message}</p>
